@@ -1,7 +1,7 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 12.00
-# Visual Studio 2013
-VisualStudioVersion = 12.0.31101.0
+# Visual Studio 14
+VisualStudioVersion = 14.0.24720.0
 MinimumVisualStudioVersion = 10.0.40219.1
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "DW.CodedUI", "DW.CodedUI\DW.CodedUI.csproj", "{745BB700-4C9E-4AFE-AE22-7F1C5ACC5F3C}"
 EndProject
@@ -12,6 +12,8 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Solution Items", "Solution 
 		Changelog.txt = Changelog.txt
 		README.txt = README.txt
 	EndProjectSection
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "TestApplication", "TestApplication\TestApplication.csproj", "{8078F5CA-AE25-4CE2-9293-432341B06FCF}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -27,6 +29,10 @@ Global
 		{53518CC4-4956-4645-8DC4-34351AE06D0D}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{53518CC4-4956-4645-8DC4-34351AE06D0D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{53518CC4-4956-4645-8DC4-34351AE06D0D}.Release|Any CPU.Build.0 = Release|Any CPU
+		{8078F5CA-AE25-4CE2-9293-432341B06FCF}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{8078F5CA-AE25-4CE2-9293-432341B06FCF}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{8078F5CA-AE25-4CE2-9293-432341B06FCF}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{8078F5CA-AE25-4CE2-9293-432341B06FCF}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
