@@ -1,0 +1,6 @@
+﻿namespace TestApplication
+{
+    public partial class App
+    {
+    }
+}
