@@ -1,0 +1,20 @@
+﻿<Window x:Class="TestApplication.ColorDetectorTestsWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="ColorDetectorTestsWindow"
+        AutomationProperties.AutomationId="CUI_ColorDetectorTestsWindow"
+        WindowStartupLocation="CenterOwner"
+        Height="300"
+        Width="300">
+    
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <TextBox Background="Red" AutomationProperties.AutomationId="CUI_Red_TextBox" />
+        <TextBox Background="Blue" AutomationProperties.AutomationId="CUI_Blue_TextBox" Grid.Row="1" />
+    </Grid>
+    
+</Window>
