@@ -1,0 +1,26 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Windows;
+using System.Windows.Controls;
+using System.Windows.Data;
+using System.Windows.Documents;
+using System.Windows.Input;
+using System.Windows.Media;
+using System.Windows.Media.Imaging;
+using System.Windows.Shapes;
+
+namespace TestApplication
+{
+    /// <summary>
+    /// Interaction logic for ColorDetectorTestsWindow.xaml
+    /// </summary>
+    public partial class ColorDetectorTestsWindow : Window
+    {
+        public ColorDetectorTestsWindow()
+        {
+            InitializeComponent();
+        }
+    }
+}
