@@ -1,0 +1,13 @@
+﻿<Window x:Class="TestApplication.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Title="MainWindow"
+        AutomationProperties.AutomationId="CUI_TestApplication_MainWindow"
+        Height="350"
+        Width="525">
+
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Button Content="ColorDetectorTests" AutomationProperties.AutomationId="CUI_ColorDetectorTests_Button" Click="ButtonBase_OnClick" />
+    </StackPanel>
+    
+</Window>
